# ZosterBackdoor

./: Ajuda-COMPILAR.txt  CMakeLists.txt  Original_CMakeLists.txt  README.md  script_facil.ps1  script_facil.sh
linux/: backdoor.c  controlador.c
resultado/: .null
windows/: backdoor.cpp  controlador.cpp
